2009-12-17	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libchip/network/greth.c: Eliminate unused type
	rtems_clock_time_value.

2009-12-11	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libchip/network/dec21140.c: Warning elimination
	(dec21140_softc->base now is an uint32_t).

2009-12-11	Ralf Corsépius <ralf.corsepius@rtems.org>

	PR 1483/cpukit
	* libchip/network/dec21140.c, libchip/network/elnk.c,
	libchip/network/if_dc.c: Move #include <rtems/pci.h> into #if
	*_SUPPORTED-guarded code sections.

2009-12-08	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libchip/network/dec21140.c, libchip/network/elnk.c,
	libchip/network/if_dc.c: Ensure PCI drivers are built on all
	supported configurations. PowerPC conditionals were not current and
	code was not being built on supported BSPs.

2009-11-23	Joel Sherrill <joel.sherrill@OARcorp.com>

	* libchip/network/smc91111.c: Formatting.

2009-11-12	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libchip/ide/ata.c (rtems_ata_initialize): Avoid implicit cast to uint16_t.
	* libchip/ide/ata.c (ata_non_data_request): Change arg from int to 
	uint32_t (16bit ints are too small).

2009-11-06	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libchip/network/elnk.c: Use PRI*32 to print u_int32_t's.
	* libchip/network/if_dc.c: Fix type mismatch.

2009-11-03	Ralf Corsépius <ralf.corsepius@rtems.org>

	* aclocal/bsp-linkcmds.m4: New.

2009-10-23	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Rework CFLAGS setup.
	* aclocal/prog-cc.m4: Remove RTEMS_CFLAGS.
	* automake/compile.am: Remove RTEMS_CFLAGS.

2009-10-22	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libchip/ide/ata.h: Move extern "C".

2009-10-22	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libchip/i2c/spi-flash-m25p40.c, libchip/i2c/spi-fram-fm25l256.c:
	Use hex-constants to avoid implicit int-casts.
	* libchip/i2c/spi-memdrv.c:
	Use hex-constants to avoid implicit int-casts.
	Use rtems_off64_t offsets to avoid loosing precision.
