@@ -1122,7 +1122,7 @@ static int sd_card_disk_ioctl( rtems_disk_device *dd, uint32_t req, void *arg)
 {
 	RTEMS_DEBUG_PRINT( "dev = %u, req = %u, arg = 0x08%x\n", dev, req, arg);
 	if (req == RTEMS_BLKIO_REQUEST) {
-		rtems_device_minor_number minor = rtems_disk_physical_minor_number( dd);
+		rtems_device_minor_number minor = rtems_disk_get_minor_number( dd);
 		sd_card_driver_entry *e = &sd_card_driver_table [minor];
 		rtems_blkdev_request *r = (rtems_blkdev_request *) arg;
 		switch (r->req) {
