@@ -1,3 +1,9 @@
+2009-12-18	Sebastian Huber <sebastian.huber@embedded-brains.de>
+
+	PR 1474
+	* libchip/i2c/spi-sd-card.c, libchip/ide/ata.c: Update for block
+	device API change.
+
 2009-12-17	Joel Sherrill <joel.sherrill@oarcorp.com>
 
 	* libchip/network/greth.c: Eliminate unused type
